# whirlpools-client

./: Cargo.toml
programs/whirlpool/: Cargo.toml
