[package]
name = "whirlpools-client"
version = "0.2.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "whirlpools_client"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { git = "https://github.com/coral-xyz/anchor.git", branch = "master" }
anchor-spl = { git = "https://github.com/coral-xyz/anchor.git", branch = "master", default-features = false, features = [
    "associated_token",
    "mint",
    "token",
] }
spl-token = { version = "7.0.0", features = ["no-entrypoint"] }
solana-program = "~2.1.11"
thiserror = "2.0.11"
uint = { version = "0.9.5", default-features = false }
borsh = "1.5.5"
bytemuck = { version = "1.7.2" }

[dev-dependencies]
proptest = "1.0"
serde = "1.0.117"
serde_json = "1.0.59"

[dev-dependencies.serde_with]
version = "1.12.0"
features = ["json"]

[patch.crates-io]
solana-zk-sdk = { git = "https://github.com/anza-xyz/agave.git", tag = "v2.1.11" }
spl-pod = { git = "https://github.com/kyee-rs/spl-pod.git", branch = "main" }
solana-program = { git = "https://github.com/anza-xyz/agave.git", tag = "v2.1.11" }
